--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -7,5 +7,8 @@
     <li class="nav__item">
       <a class="nav__link" routerLink="/todo">ToDo</a>
     </li>
+    <li class="nav__item">
+      <a class="nav__link" routerLink="/api">Api</a>
+    </li>
   </ul>
 </nav>
